--- a/src/playoffMachine/PlayoffMachine.css
+++ b/src/playoffMachine/PlayoffMachine.css
@@ -27,3 +27,7 @@
     --bs-btn-disabled-border-color: #212529;
     --bs-gradient: none;
 }
+
+.playoffTeam {
+  background-color: #dff0d8 !important;
+}
